package com.switchbit.controller.user;

import java.io.IOException;
import jakarta.servlet.ServletException;
import jakarta.servlet.http.*;
import jakarta.servlet.annotation.*;

import java.sql.*;

import com.switchbit.exceptions.CloseConnectionException;
import com.switchbit.exceptions.DataAccessException;
import com.switchbit.exceptions.DuplicateResourceException;
import com.switchbit.exceptions.RollBackException;
import com.switchbit.model.*;
import com.switchbit.service.UserService;


/**
 * Handle Signup request 
 * Collect input from user 
 * Check for validation
 * Create user 
 * success -> redirect to login/signin page
 * failure -> redirect to signup page
 */
public class UserSignUpServlet extends HttpServlet {

    private UserService userService;

    @Override
    public void init() throws ServletException {
        super.init();
        this.userService = new UserService();
    }

    @Override
    protected void doPost(HttpServletRequest request, HttpServletResponse response)
            throws ServletException, IOException {

        // Collect form input
        String userName = request.getParameter("user-name");
        String userEmail = request.getParameter("user-email");
        String userPhone = request.getParameter("user-phone");
        String userAddress = request.getParameter("user-address");
        String password = request.getParameter("user-password");
        
        HttpSession session = request.getSession(false);

        // Basic validation
        if (userName == null || userEmail == null || password == null ||
            userName.isEmpty() || userEmail.isEmpty() || password.isEmpty()) {
            session.setAttribute("errorMessage", "Name, Email, and Password are required.");
            response.sendRedirect(request.getContextPath()+"/signup.jsp");
            return;
        }

        // Create User object
        User user = new User();
        user.setUserName(userName);
        user.setUserEmail(userEmail.toLowerCase().trim()); // normalize email
        user.setUserPhone(userPhone);
        user.setUserAddress(userAddress);
        user.setRegDate(new Timestamp(System.currentTimeMillis()));

        try {
            // Call service to add user
            User createdUser = userService.addUser(user, password);

            // Redirect to login page
            response.sendRedirect(request.getContextPath() + "/signin.jsp");
        }
        catch (DuplicateResourceException e) {
        	if (session!=null)
        		session.setAttribute("errorMessage", e.getMessage());
        	response.sendRedirect(request.getContextPath()+"/signup.jsp");
        }
        catch (DataAccessException e) {
            // Handle DB errors
        	if (session!=null)
        		session.setAttribute("errorMessage", e.getMessage());
            response.sendRedirect(request.getContextPath()+"/signup.jsp");
        } catch (RollBackException e) {
			e.printStackTrace();
		} catch (CloseConnectionException e) {
			e.printStackTrace();
		}
    }
}

